Apple Pay + GooglePay changes in progress